--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <div class="actionBtn">
                   <a href="https://www.facebook.com/profile.php?id=100082080654275&mibextid=ZbWKwL">  <button>VISIT</button> </a>
-                   <a href="www.messenger.com/t/KNate06">   <button>MESSAGE</button></a> 
+                   <a href="m.me/100082080654275">   <button>MESSAGE</button></a> 
                 
                 </div>
 
